Updated build pipelines

--- a/api/Users/azure-pipeline.yaml
+++ b/api/Users/azure-pipeline.yaml
@@ -1,13 +1,12 @@
 trigger:
   branches:
     include:
-    - main
+    - master
   paths:
     include:
-    - api/*
+    - api/Users/*
     exclude:
     - README.md
-    - api/README.md
 
 pool:
   vmImage: 'ubuntu-latest'
