--- a/app/users/azure-pipelines.yml
+++ b/app/users/azure-pipelines.yml
@@ -6,10 +6,10 @@
 trigger:
   branches:
     include:
-    - main
+    - master
   paths:
     include:
-    - app/*
+    - app/users/*
     exclude:
     - README.md
     - app/README.md
@@ -24,7 +24,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    cd app
     npm install
     npm run build
   displayName: 'npm install and build'
+  workingDirectory: app/users
