--- a/infrastructure/ansible/webserver.yml
+++ b/infrastructure/ansible/webserver.yml
@@ -1,26 +1,60 @@
 ---
-- hosts: database
+- hosts: web
   become: yes
   tasks:
-    - name: install caddy red hat
-      shell: |
-        dnf install 'dnf-command(copr)'
-        dnf copr enable @caddy/caddy
-        dnf install caddy
-      when: ansible_facts['os_family'] == "RedHat"
+    - name: disable selinux
+      ansible.posix.selinux:
+        state: disabled
+      notify: reboot
+    # - name: enable caddy repository
+    #   shell: |
+    #     dnf install 'dnf-command(copr)'
+    #     dnf copr enable @caddy/caddy
+    #   when: ansible_facts['os_family'] == "RedHat"
+    - name: install 'dnf-command(copr)'
+      dnf:
+        name: 'dnf-command(copr)'
+        state: latest
+    - name: enable caddy repo
+      shell: 
+        cmd: dnf copr enable @caddy/caddy
+    - name: install caddy
+      dnf:
+          name: caddy
+          enablerepo: '@caddy/caddy'
+          state: latest 
     - name: enable caddy
-    - name: set caddy environment variable
+      service:
+        name: caddy
+        state: started
+        enabled: yes
     - name: copy caddyfile
+      template:
+        dest: /etc/caddy/Caddyfile
+        src: ../webserver/Caddyfile
       notify: reload caddy
-    - name: configure directories
-    - name: reload caddy
+    - name: configure User App Directory
+      file:
+        path: /var/www/userApp
+        state: directory
+    - name: configure User API Directory
+      file:
+        path: /var/www/userApi
+        state: directory
     - name: install dotnet core sdk
-    - name: copy users-api.service file
-      copy:
-        dest: /etc/systemd/system/users-api.service 
-        src: ../webserver/users-api.service 
-      notify: restart service
-    - name: start service
+      dnf:
+        name: dotnet-sdk-3.1
+        state: latest
+    # - name: copy users-api.service file
+    #   template:
+    #     dest: /etc/systemd/system/users-api.service 
+    #     src: ../webserver/users-api.service 
+    #   notify: restart service
+    # - name: start service
+    #   service:
+    #     name: users-api.service
+    #     state: started
+    #     enabled: yes
 
   handlers:
     - name: reload caddy
@@ -31,3 +65,5 @@
       service: 
         name: users-api.service
         state: restarted
+    - name: reboot
+      reboot:
