--- a/infrastructure/webserver/users-api.service
+++ b/infrastructure/webserver/users-api.service
@@ -9,7 +9,7 @@ RestartSec=10
 KillSignal=SIGINT
 SyslogIdentifier=users-api
 User=www-data
-Environment=ASPNETCORE_ENVIRONMENT=Development
+Environment=ASPNETCORE_ENVIRONMENT={{ aspnetcore_environment }}
 
 [Install]
 WantedBy=multi-user.target
