--- a/api/Users/azure-pipeline.yaml
+++ b/api/Users/azure-pipeline.yaml
@@ -2,6 +2,7 @@ trigger:
   branches:
     include:
     - master
+    - feature/build_pipelines
   paths:
     include:
     - api/Users/*
@@ -23,3 +24,19 @@ steps:
       command: build
       arguments: '/warnaserror'
       workingDirectory: 'api/Users'
+  
+  - task: DotNetCoreCLI@2
+    displayName: Dotnet Publish
+    inputs:
+      command: publish
+      publishWebProjects: True
+      arguments: '--output ${Build.ArtifactStagingDirectory}'
+      zipAfterPublish: True
+      workingDirectory: 'api/Users'
+
+  - task: PublishBuildArtifacts@1
+    displayName: Publish Artifact
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'UsersAPI'
+      publishLocation: 'Container'
