--- a/app/users/azure-pipelines.yml
+++ b/app/users/azure-pipelines.yml
@@ -7,6 +7,7 @@ trigger:
   branches:
     include:
     - master
+    - feature/build_pipelines
   paths:
     include:
     - app/users/*
@@ -28,3 +29,17 @@ steps:
     npm run build
   displayName: 'npm install and build'
   workingDirectory: app/users
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(agent.builddirectory)/s/build'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/UsersApp.zip'
+    replaceExistingArchive: 'true'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'UsersApp'
+    publishLocation: 'Container'
