--- a/app/users/azure-pipelines.yml
+++ b/app/users/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
   workingDirectory: app/users
 
 - script: ls
-  workingDirectory: $(agent.builddirectory)
+  workingDirectory: $(agent.builddirectory)/s
 
 
 - task: ArchiveFiles@2
