--- a/app/users/azure-pipelines.yml
+++ b/app/users/azure-pipelines.yml
@@ -29,13 +29,11 @@ steps:
   displayName: 'npm install and build'
   workingDirectory: app/users
 
-- task: ArchiveFiles@2
+- task: CopyFiles@2
   inputs:
-    rootFolderOrFile: '$(agent.builddirectory)/s/app/users/build'
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/UsersApp.zip'
-    replaceExistingArchive: 'true'
+    SourceFolder: '$(agent.builddirectory)/s/app/users/build'
+    Contents: '**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
   inputs:
