--- a/app/users/azure-pipelines.yml
+++ b/app/users/azure-pipelines.yml
@@ -43,21 +43,15 @@ stages:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'UsersApp'
         publishLocation: 'Container'
-- stage: deploy
+- stage: Deploy
   jobs:
-  - deployment: DeployWeb
-    displayName: deploy Web App
-    pool:
-      vmImage: 'Ubuntu-latest'
-    environment:
-      name:  Dev
-      resourceType: VirtualMachine
-      tags: web
+  - deployment: UserApp
+    displayName: Deploy UserApp
+    environment: Dev.dev-web
     strategy:
       runOnce:
         deploy:
           steps:
-          - script: echo Hello world
           - script: pwd
           - script: ls
           - script: cp -r $(Pipeline.Workspace)/* /var/www/userApp 
