--- a/app/users/azure-pipelines.yml
+++ b/app/users/azure-pipelines.yml
@@ -52,6 +52,9 @@ stages:
       runOnce:
         deploy:
           steps:
-          - script: pwd
-          - script: ls
-          - script: cp -r $(Pipeline.Workspace)/* /var/www/userApp 
+          - task: CopyFiles@2
+            inputs:
+              sourceFolder: $(Pipeline.Workspace)/UserApp
+              contents: '**' 
+              targetFolder: /var/www/userApp
+              cleanTargetFolder: true
