--- a/api/Users/azure-pipeline.yaml
+++ b/api/Users/azure-pipeline.yaml
@@ -50,9 +50,8 @@ stages:
       runOnce:
         deploy:
           steps:
-          - task: CopyFiles@2
+          - task: ExtractFiles@1
             inputs:
-              sourceFolder: $(Pipeline.Workspace)/UsersAPI
-              contents: '**' 
-              targetFolder: /var/www/userApi
-              cleanTargetFolder: true
+              archiveFilePatterns: '**/*.zip'
+              destinationFolder: '/var/www/userApi'
+              cleanDestinationFolder: true
