stop service before deploying

--- a/api/Users/azure-pipeline.yaml
+++ b/api/Users/azure-pipeline.yaml
@@ -50,14 +50,10 @@ stages:
       runOnce:
         deploy:
           steps:
+          - bash: sudo systemctl stop users-api.service
           - task: ExtractFiles@1
             inputs:
               archiveFilePatterns: '$(Pipeline.Workspace)/UsersAPI/**/*.zip'
               destinationFolder: '/var/www/userApi'
               cleanDestinationFolder: true
-          # - task: CopyFiles@2
-          #   inputs:
-          #     sourceFolder: $(Pipeline.Workspace)/UsersAPI
-          #     contents: '**' 
-          #     targetFolder: /var/www/userApi
-          #     cleanTargetFolder: true
+          - bash: sudo systemctl start users-api.service
