allows deployer user to stop and star without sudo

--- a/api/Users/azure-pipeline.yaml
+++ b/api/Users/azure-pipeline.yaml
@@ -45,7 +45,7 @@ stages:
   jobs:
   - deployment: UserApi
     displayName: Deploy UserApi
-    environment: Dev.dev-web
+    environment: Dev.web-dev
     strategy:
       runOnce:
         deploy:
