--- a/pipelines/users-frontend/azure-pipelines.yml
+++ b/pipelines/users-frontend/azure-pipelines.yml
@@ -10,6 +10,7 @@ trigger:
   paths:
     include:
     - app/users/*
+    - pipelines/users-frontend/*
     exclude:
     - README.md
     - app/README.md
