--- a/pipelines/ansible/azure-pipelines.yml
+++ b/pipelines/ansible/azure-pipelines.yml
@@ -14,8 +14,8 @@ stages:
     jobs:
       - job: install_ansible_requirements
         steps:
-          - bash: ansible-galaxy install role -r infrastructure/ansible/requirements.yml
-          - bash: ansible-galaxy install collection -r infrastructure/ansible/requirements.yml
+          - bash: ansible-galaxy role install -r infrastructure/ansible/requirements.yml
+          - bash: ansible-galaxy collection install -r infrastructure/ansible/requirements.yml
       - job: test_ansible_syntax
         dependsOn: install_ansible_requirements
         steps:
