added a dependency to ansible pipeline

--- a/pipelines/ansible/azure-pipelines.yml
+++ b/pipelines/ansible/azure-pipelines.yml
@@ -30,6 +30,7 @@ stages:
               BECOME_PASS: $(become_password)
         
       - job: provision_database
+        dependsOn: test_ansible_syntax
         steps:
           - task: DownloadSecureFile@1
             name: ansible_vault
