getting started with integration tests

--- a/pipelines/users-api/azure-pipeline.yaml
+++ b/pipelines/users-api/azure-pipeline.yaml
@@ -63,3 +63,13 @@ stages:
               targetFolder: /var/www/userApi
               cleanTargetFolder: true
           - bash: sudo systemctl start users-api.service
+- stage: Testing
+  pool:
+    vmImage: 'ubuntu-latest'
+  jobs:
+    - job: IntegrationTests
+      displayName: Integration Tests
+      steps:
+        - bash: pip install pytest
+        - bash: py.test
+          workingDirectory: testing/integrationTests
