--- a/pipelines/users-api/azure-pipeline.yaml
+++ b/pipelines/users-api/azure-pipeline.yaml
@@ -72,4 +72,4 @@ stages:
       steps:
         - bash: python -m pip install --upgrade pip setuptools wheel
         - bash: pip install pytest Faker pytest-cov
-        - bash: pytest testing/integrationTests --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+        - bash: python -m pytest testing/integrationTests --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
