--- a/pipelines/users-api/azure-pipeline.yaml
+++ b/pipelines/users-api/azure-pipeline.yaml
@@ -73,3 +73,8 @@ stages:
         - bash: python -m pip install --upgrade pip setuptools wheel
         - bash: pip install pytest Faker pytest-cov requests
         - bash: python -m pytest testing/integrationTests --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+        - task: PublishTestResults@2
+          inputs:
+            testResultsFormat: 'JUnit'
+            testResultsFiles: 'testing/integrationTests/junit/test-results.xml'
+            failTaskOnFailedTests: true
