--- a/pipelines/users-api/azure-pipeline.yaml
+++ b/pipelines/users-api/azure-pipeline.yaml
@@ -91,7 +91,7 @@ stages:
       steps:
         - bash: python -m pip install --upgrade pip setuptools wheel
         - bash: python -m pip install testresources seleniumbase
-        - bash: python -m sbase install chromedriver latest
+        # - bash: python -m sbase install chromedriver latest
         - bash: python -m pytest testing/integrationTests --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
           workingDirectory: testing/functionalTests
         - task: PublishTestResults@2
