--- a/pipelines/users-api/azure-pipeline.yaml
+++ b/pipelines/users-api/azure-pipeline.yaml
@@ -97,3 +97,15 @@ stages:
           condition: succeededOrFailed()
           inputs:
             testResultsFiles: '**/test-*.xml'
+    - job: UsersFirefox
+      displayName: Users Selenium Tests Firefox
+      dependsOn: []
+      steps:
+        - bash: python -m pip install --upgrade pip setuptools wheel
+        - bash: python -m pip install testresources seleniumbase
+        # - bash: python -m sbase install chromedriver latest
+        - bash: python -m pytest testing/functionalTests --browser=firefox --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+        - task: PublishTestResults@2
+          condition: succeededOrFailed()
+          inputs:
+            testResultsFiles: '**/test-*.xml'
